[gd_scene load_steps=2 format=3 uid="uid://c1hdgphjtb1cq"]

[ext_resource type="Script" uid="uid://bsam3yu114fjs" path="res://Code/control.gd" id="1_rbmmp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbmmp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -221.0
offset_right = -55.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_stretch_ratio = 23.65

[node name="SFXVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
